--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.9",
+    "aos": "^3.0.0-beta.6",
     "gsap": "^3.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
