--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "firebase": "^9.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.5.0"
   },
   "devDependencies": {
