This application is using Redux Right now...

--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
-    "react-router-dom": "^6.5.0"
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.5.0",
+    "redux": "^4.2.0",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
