--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-masonry-css": "^1.0.16",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.5.0",
     "redux": "^4.2.0",
