--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.5.0",
     "redux": "^4.2.0",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
