Added a toaster for updating each inputs

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^7.10.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
     "react-masonry-css": "^1.0.16",
     "react-redux": "^8.0.5",
